force-app/main/default/objects/Retail_Upload_Return_Invoice__c/Retail_Upload_Return_Invoice__c.object-meta.xml
<CustomObject>
    <label>Retail Upload Return Invoice</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Return Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Upload Return Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>