force-app/main/default/objects/Retail_Upload_Return_Invoice__c/fields/Invoice_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Upload_Date__c</fullName>
    <label>Invoice Upload Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>