force-app/main/default/objects/Retail_Upload_Return_Invoice__c/fields/Select_Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Select_Return_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Select Return Order</label>
    <referenceTo>Retail_Order_Return_Form__c</referenceTo>
    <relationshipLabel>Retail Upload Return Invoices</relationshipLabel>
    <relationshipName>Retail_Upload_Return_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>