force-app/main/default/objects/Retail_Upload_Return_Invoice__c/fields/Upload_Commercial_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Upload_Commercial_Invoice__c</fullName>
    <label>Upload Commercial Invoice</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>