force-app/main/default/objects/Retail_Upload_Return_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Select_Return_Order__c</columns>
    <columns>Upload_Commercial_Invoice__c</columns>
    <columns>Upload_E_Way_Bill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>